@@ -49,6 +49,7 @@ using std::string;
 using std::vector;
 
 static string *emptystring = NULLPTR;
+static CONSTEXPR const char *error_reading_repos_conf = "error: %s";
 
 typedef char ArchUsed;
 
@@ -233,9 +234,15 @@ void PortageSettings::init(EixRc *eixrc, const ParseError *e, bool getlocal, boo
 			const char *s = repositories.c_str();
 			have_repos = reposfile.readmem(s, s + repositories.size(), NULLPTR);
 		} else {
-			have_repos = reposfile.read((*eixrc)["PORTAGE_REPOS_CONF"].c_str(), NULLPTR, true);
-			if(reposfile.read((m_eprefixconf + USER_REPOS_CONF).c_str(), NULLPTR, true)) {
+			string errtext;
+			have_repos = reposfile.read((*eixrc)["PORTAGE_REPOS_CONF"].c_str(), &errtext, true);
+			if(!have_repos) {
+				eix::say_error(_(error_reading_repos_conf)) % errtext;
+			}
+			if(reposfile.read((m_eprefixconf + USER_REPOS_CONF).c_str(), &errtext, true)) {
 				have_repos = true;
+			} else {
+				eix::say_error(_(error_reading_repos_conf)) % errtext;
 			}
 		}
 		const string *main_repo(NULLPTR);
